<resources>
    <string name="app_name">Apuestas</string>
    <string name="titulo">Online Bets</string>
    <string name="registro">LOGIN</string>
    <string name="apuestas">BETS</string>
    <string name="ajustes">SETTING</string>
    <string name="sorteo">RESULTS</string>
    <string name="ayuda">Help</string>
    <string name="Acerca">About</string>
    <string name="nombre">Name </string>
    <string name="email">Email </string>
    <string name="fecha">BirthDate(dd/mm/yyyy)</string>
    <string name="validar">CHECK IT</string>
    <string name="futbol">Football</string>
    <string name="tenis">Tennis</string>
    <string name="baloncesto">Basket</string>
    <string name="balonmano">Handball</string>
    <string name="aceptar">ACCEPT</string>
    <string name="volver">BACK</string>
    <string name="dinero">Money to bet</string>
    <string name="guardar">SAVE</string>
    <string name="numero1">NUMBER 1</string>
    <string name="numero2">NUMBER 2</string>
    <string name="enun">You are betting on:</string>
    <string name="autor">Author: Miguel Fernández Marín</string>
    <string name="anyo">Year 2017</string>
    <string name="suerte">!Good Luck¡</string>
    <string name="vcompleta">To select more than one buy the complete version</string>
    <string name="una">Select at least one</string>
    <string name="guardado">Saved</string>
    <string name="nonombre">You haven not introduce a name</string>
    <string name="noemail">You haven not introduce the email </string>
    <string name="noedad">You are underaged</string>
    <string name="nonumeros">Missing numbers</string>
    <string name="nm">Number have to be more than 300</string>
    <string name="correcto">Nice</string>
    <string name="registrarte">You have to login</string>
    <string name="seleccionar">You have to login and select sport</string>
    <string name="fecha2">Date: </string>
    <string name="adelante">This option will be able in the next patch</string>
    <string name="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac fermentum elit. Nunc lobortis placerat libero vel semper. Curabitur rhoncus tempor posuere. Aenean tincidunt lectus eget sapien pretium egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque nisi lacus, imperdiet sit amet eros porttitor, mattis mattis turpis. Nullam tempor tortor a nibh volutpat imperdiet. In semper ultricies ligula, maximus maximus dolor mattis nec. Fusce risus lorem, condimentum in mauris vel, maximus scelerisque neque. Pellentesque hendrerit ipsum vitae nibh maximus iaculis quis et ligula. Mauris quis nulla porta, varius neque eget, malesuada lectus. Integer malesuada nisl a turpis facilisis cursus.

Vivamus leo metus, euismod at erat vel, tristique feugiat nisi. Ut varius erat diam, a efficitur tortor interdum ac. In hac habitasse platea dictumst. Mauris a dui condimentum, accumsan nulla sit amet, cursus ex. Nullam at ex tincidunt neque blandit condimentum sit amet a diam. Sed efficitur dui et dignissim rhoncus. Integer rutrum condimentum sapien gravida aliquam. Curabitur quis lacus vitae ex blandit accumsan id eget eros.

In ac tempus nibh, eget dignissim eros. Cras condimentum, odio ut maximus mollis, neque odio cursus erat, in iaculis ante libero a sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque gravida nibh et metus accumsan, quis scelerisque tortor malesuada. Nam faucibus consectetur nisl, a mattis elit iaculis sit amet. Nunc vitae euismod lectus, quis tempor est. Ut mattis euismod arcu eget volutpat. Nullam varius condimentum ligula eu consequat. Morbi at hendrerit augue. Nunc eleifend neque id interdum tincidunt. Proin sagittis, mi in porta egestas, tellus velit volutpat sem, malesuada eleifend ipsum tellus eu erat. Ut quis euismod urna.

Vivamus fringilla rutrum viverra. Suspendisse potenti. Nam ac erat sapien. Aenean fringilla viverra mauris vitae pharetra. Cras ut dolor eget arcu varius euismod. Phasellus congue lorem urna, vitae blandit lorem finibus eu. Nulla luctus libero sed diam commodo sagittis. Ut porttitor eu elit eu egestas. Vivamus ut finibus mi, ac mollis erat. Sed eget risus eget est cursus dapibus. Phasellus et congue augue, ut tempus purus. In gravida urna at hendrerit finibus. Sed nec nisi tempus, ornare justo a, varius tortor. Etiam et enim a dolor molestie fringilla sed eget lectus. Aliquam finibus diam ut tellus rutrum, sed iaculis ex semper.

Aliquam id ornare eros. Pellentesque euismod neque et eleifend congue. Integer feugiat velit velit, vel laoreet nibh tempus non. In feugiat a risus at interdum. Nam in laoreet odio. Donec a fermentum quam. Nam quis vulputate mauris. Ut condimentum enim lectus, ut cursus nisl feugiat nec. Duis arcu mi, malesuada vitae magna tincidunt, consectetur consectetur ipsum. Nam id nulla mauris.

Interdum et malesuada fames ac ante ipsum primis in faucibus. In convallis justo eget eros auctor, nec euismod eros vestibulum. Vestibulum tristique, odio non ornare tristique, diam mi ullamcorper enim, in egestas eros orci sit amet tortor. Maecenas ornare velit ut arcu condimentum scelerisque ac nec arcu. Nam sodales efficitur lectus, id blandit tortor iaculis in. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec vestibulum sapien at turpis fermentum ullamcorper. Integer fermentum tellus arcu, gravida dignissim nisi sollicitudin in. Cras interdum lorem vitae ex porttitor, quis porta enim aliquam.

Nullam vehicula nisi eu ornare ullamcorper. Donec eu commodo ante. Sed vitae imperdiet sapien. Quisque hendrerit commodo velit sit amet efficitur. Sed convallis at elit sed lobortis. Duis luctus nunc ac ex aliquam dapibus. Duis eget purus iaculis, feugiat magna quis, vulputate velit.</string>
    <string name="prefUser">User settings</string>
    <string name="prefUsuario">User</string>
    <string name="prefUsuarioResumen">to save the user</string>
    <string name="prefEmail">Email</string>
    <string name="prefEmailResumen">To save the email</string>
    <string name="prefFecha">Birthday</string>
    <string name="prefFechaResumen">To save your birthday</string>
    <string name="prefApuesta">Bet</string>
    <string name="prefApuestas">Sport to bet</string>
    <string name="prefApuestaResumen">Default value in the bet</string>
    <string name="prefDinero">Money to bet</string>
    <string name="prefDineroResumen">To save the value of beting money</string>
    <string name="preferencias">Preferences</string>
    <string name="deporte">Sport</string>
    <string name="anadirpartido">Add a match</string>
    <string name="modificarpartido">Modify a match</string>
    <string name="partido">Match</string>
    <string name="equipo1">team 1</string>
    <string name="equipo2">Team 2</string>
    <string name="resultado1">Result 1</string>
    <string name="resultado2">Result 2</string>
    <string name="noIdPartido">The filed id is empy</string>
    <string name="noTipoDeporte">The field sport is empy</string>
    <string name="noEquipo">The fileds team cant be empty</string>
    <string name="noResultado">The fields restults can\'t be empty</string>
    <string name="noInsertar">This match is already in the database</string>
    <string name="partidoanadido">The match has benn added</string>
    <string name="noModificar">This march doesn\'t exist to modify</string>
    <string name="partidoModificado">Match modified</string>


</resources>
