<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tipodedeporte"
        android:layout_width="match_parent"
        android:layout_height="451dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/deporte"
        android:textSize="25dp"

        />

    <TableLayout
        android:id="@+id/listaDeportes"
        android:layout_width="match_parent"
        android:layout_height="659dp"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonanadirpartido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anadirpartido" />

        <Button
            android:id="@+id/botonmodificarpartido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificarpartido" />
    </LinearLayout>

</LinearLayout>